--- a/index_home.html
+++ b/index_home.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../Code css ver 2 new/article.css" />
   <link rel="stylesheet" href="../Code css ver 2 new/aside.css" />
   <link rel="stylesheet" href="../Code css ver 2 new/footer.css" />
-
+remote_theme: Godzilla
   
 </head>
 <body>
